--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css" />
-    <script type="module" src="./js/1-gallery.js"></script>
-    <script type="module" src="./js/2-form.js"></script>
+    <!-- <script type="module" src="./js/1-gallery.js"></script> -->
+    <!-- <script type="module" src="./js/2-form.js"></script> -->
   </head>
   <body>
-    <!-- <load ="partials/header.html" /> -->
-
-    <!-- Loads the specified .html file -->
-    <!-- <load ="partials/vite-promo.html" /> -->
+    <load ="/1-gallery.html" />
+    <load ="/2-form.html" />
   </body>
 </html>
