--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <script type="module" src="./js/1-gallery.js"></script>
   </head>
-  <body></body>
+  <body>
+    <ul class="gallery"></ul>
+  </body>
 </html>
